--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,20 +6,11 @@
     <h1>Inscription</h1>
 
     {{ form_start(registrationForm) }}
-        <fieldset>
-            <legend>Mon identité</legend>
-            {{ form_row(registrationForm.name) }}
-            {{ form_row(registrationForm.firstname) }}
-            {{ form_row(registrationForm.email) }}
-        </fieldset>
-
-        <fieldset>
-            <legend>Mon adresse</legend>
-            {{ form_row(registrationForm.adress.adress) }}
-            {{ form_row(registrationForm.adress.postCode) }}
-            {{ form_row(registrationForm.adress.city) }}
-            {{ form_row(registrationForm.adress.country) }}
-        </fieldset>
+        {{ form_row(registrationForm.username) }}
+        {{ form_row(registrationForm.name) }}
+        {{ form_row(registrationForm.firstname) }}
+        {{ form_row(registrationForm.email) }}
+        
         
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
