--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,8 +12,8 @@
                 <td>{{ product.id }}</td>
             </tr>
             <tr>
-                <th>Wording</th>
-                <td>{{ product.wording }}</td>
+                <th>label</th>
+                <td>{{ product.label }}</td>
             </tr>
             <tr>
                 <th>Description</th>
