--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Wording</th>
+                <th>label</th>
                 <th>Description</th>
                 <th>Weight</th>
                 <th>Price</th>
@@ -22,7 +22,7 @@
         {% for product in products %}
             <tr>
                 <td>{{ product.id }}</td>
-                <td>{{ product.wording }}</td>
+                <td>{{ product.label }}</td>
                 <td>{{ product.description }}</td>
                 <td>{{ product.weight }}</td>
                 <td>{{ product.price }}</td>
