--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,16 +12,12 @@
                 <td>{{ product.id }}</td>
             </tr>
             <tr>
-                <th>label</th>
+                <th>Label</th>
                 <td>{{ product.label }}</td>
             </tr>
             <tr>
                 <th>Description</th>
                 <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Weight</th>
-                <td>{{ product.weight }}</td>
             </tr>
             <tr>
                 <th>Price</th>
