--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -23,7 +23,7 @@
                 <td>{{ product.label }}</td>
                 <td>{{ product.description }}</td>
                 <td>{{ product.price }}</td>
-                <td>{{ product.picture }}</td>
+                <td><img src={{ product.picture}}</td>
                 <td>
                     <a href="{{ path('app_product_show', {'id': product.id}) }}">show</a>
                     <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
