display products cards

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -41,8 +41,7 @@
       style="background-color: rgba(0, 0, 0, 0.6)">
       <div class="flex h-full items-center justify-center">
         <div class="text-white">
-          <h2 class="mb-4 text-4xl font-semibold">Heading</h2>
-          <h4 class="mb-6 text-xl font-semibold">Subheading</h4>
+          <h2 class="mb-4 text-4xl font-semibold">Bienvenue chez Mercadona</h2>
         </div>
       </div>
     </div>
@@ -51,7 +50,7 @@
 <footer>
 
 <footer class="fixed bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="" class="hover:underline">Mercadona™</a>. All Rights Reserved.
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
