--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -4,6 +4,7 @@
 
 {% block body %}
     <h1>Products</h1>
+        {{ dump(product) }}
 
     <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 p-8">
         {% for product in products %}
@@ -13,6 +14,8 @@
                     <h5 class="mb-2 text-xl font-medium text-neutral-800 dark:text-neutral-50">{{ product.label }}</h5>
                     <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">{{ product.description }}</p>
                     <p class="text-lg text-neutral-500 dark:text-neutral-300">{{ product.price }} €</p>
+                    <p class="text-lg text-neutral-500 dark:text-neutral-300">{{ product.price }} €</p>
+                
                 </div>
             </div>
         {% endfor %}
