--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,8 @@
 
 
 
-<ul>
+<div class="p-4 ">
+<ul class="flex flex-row justify-center gap-8 p-4 text-black-800 font-bold ">
 <li> <a href="{{ path('app_product_index') }} "> Voir toutes les catégories</a></li>
 {% for category in categories %}
 
@@ -14,6 +15,7 @@
 {% endfor %}
 
 </ul>
+
 
 
  <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
@@ -24,7 +26,7 @@
         </div>
         <div class="mt-4 flex justify-between">
           <div>
-            <h3 class="text-sm text-gray-700">
+            <h3 class="text-md text-gray-700">
               <a href="#">
                 <span aria-hidden="true" class="absolute inset-0"></span>
                {{ product.label }}
@@ -32,16 +34,17 @@
             </h3>
            </div>
          {% if product.productPromotion.promotionPercentage is defined %}
-          <p class="mt-1 text-sm text-grey-500 line-through ">{{ product.price }} €</p>
+          <p class="m-2 text-md text-grey-500 line-through ">{{ product.price }} €</p>
           {% set promoPrice = product.price * product.productPromotion.promotionPercentage  / 100 %}
-             <p class="mt-1 text-sm  text-red-500 font-bold">  {{ product.price - promoPrice}} €</p>
+             <p class="m-2 text-md  text-red-500 font-bold">  {{ product.price - promoPrice}} €</p>
              {% else %}
-           <p class="mt-1 text-sm  text-red-500 font-bold">  {{ product.price}} €</p>
+           <p class="m-2 text-md  text-red-500 font-bold">  {{ product.price}} €</p>
              {%endif %}
           </div>
           <p class="text-sm font-medium text-gray-900">{{ product.description }}</p>        
       
       </div>
+     
        {% endfor %}
     
 
