--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,7 +7,7 @@
 
 
 <div class="p-4 ">
-<ul class="md:flex flex-row justify-center gap-8 p-4 text-blue-700 dark:text-gray-400 font-semibold">
+<ul class="md:flex flex-row justify-center gap-8 p-4  dark:text-black-400 font-semibold">
 <li class="first:font-normal"> <a href="{{ path('app_product_index') }} "> Toutes les catégories</a></li>
 {% for category in categories %}
 
