--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,10 +7,9 @@
 <!-- This is an example component --> 
   <div
     class="relative overflow-hidden bg-cover bg-no-repeat p-12 text-center"
-    style="
-      background-image: url('https://tecdn.b-cdn.net/img/new/slides/041.webp');
-      height: 900px;
-    ">
+      style="height: 900px;background-image:url('/pictures/pexels-angela-roma-7319294.jpg');background-position: center;object-fit: cover;object-position: center;"
+    >
+
     <div
       class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-fixed"
       style="background-color: rgba(0, 0, 0, 0.6)">
