--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,8 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
+    <div><h1 class="h3 mb-3 text-center font-weight-normal text-xl">Connexion</h1>
+    <div class="p-4 text-center">
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Mot de passe</label>
@@ -23,6 +24,10 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
+    <button class="btn btn-lg btn-primary " type="submit">
+        Se connecter
+    </button>
+    </div>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -35,8 +40,8 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Me connecter
-    </button>
+    <div class"text-center text-lg">
+    
+    </div>
 </form>
 {% endblock %}
