--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,6 +29,8 @@
     </button>
     </div>
 
+    <div class="text-center p-4"><p>Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez vous en cliquant ici</a></p></div>
+
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
