forgotten password added

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,6 +30,8 @@
     </div>
 
     <div class="text-center p-4"><p>Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez vous en cliquant ici</a></p></div>
+    <div class="text-center p-4"><p>Vous avez oublié votre mot de passe ? <a href="{{ path('app_forgot_password_request') }}">Cliquez-ici</a>
+</p></div>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
