--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,17 +6,17 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <h1 class="text-center p-4">Réinitialisation de votre mot de passe</h1>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
-        <div>
+        
+        <div class="p-4">
             <small>
-                Enter your email address and we will send you a
-                link to reset your password.
+                Entrez votre adresse email et vous recevrez un lien pour réinitialiser votre mot de passe.
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Envoyer la demande de réinitialisation du mot de passe</button>
     {{ form_end(requestForm) }}
 {% endblock %}
