--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,7 +12,7 @@
                 <img class="h-48 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src="{{ product.picture }}" alt="{{ product.label }}" />
                 <div class="flex flex-col justify-start p-6">
                     <h5 class="mb-2 text-xl font-medium text-neutral-800 dark:text-neutral-50">{{ product.label }}</h5>
-                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">{{ product.description }}</p>
+                    <p class="mb-4 text-base text-neutral-600 dark:text-neutral-200">{{ product.description | raw  }}</p>
                     <p class="text-lg text-neutral-500 dark:text-neutral-300">{{ product.price }} €</p>
                     <p class="text-lg text-neutral-500 dark:text-neutral-300">{{ product.price }} €</p>
                 
