--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,58 +4,58 @@
 
 {% block body %}
 {{ form_start(registrationForm) }}
-
-<h1 class="text-center text-xl p-4">Inscription</h1>
+<div class="flex flex-col items-center">
+<h1 class="text-center text-5xl p-10">Inscription</h1>
 <div class="w-full max-w-xs">
     
-<div>
-  <div class="p-2">
+<div class="flex flex-col justify-center">
+  <div class="p-4">
     {{ form_label(registrationForm.username) }}
     <div>
     {{ form_widget(registrationForm.username) }}
     </div>
   </div>
 
-  <div class="p-2">
+  <div class="p-4">
     {{ form_label(registrationForm.name) }}
     <div>
     {{ form_widget(registrationForm.name) }}
     </div>
   </div>
 
-  <div class="p-2">
+  <div class="p-4">
     {{ form_label(registrationForm.firstname) }}
     <div>
     {{ form_widget(registrationForm.firstname) }}
     </div>
   </div>
 
-  <div class="p-2">
+  <div class="p-4">
     {{ form_label(registrationForm.email) }}
     <div>
     {{ form_widget(registrationForm.email) }}
     </div>
   </div>
 
-  <div class="p-2">
+  <div class="p-4">
     {{ form_label(registrationForm.plainPassword.first) }}
     <div>
     {{ form_widget(registrationForm.plainPassword.first) }}
     </div>
   </div>
 
-  <div class="p-2">
+  <div class="p-4">
     {{ form_label(registrationForm.plainPassword.second) }}
     <div>
     {{ form_widget(registrationForm.plainPassword.second) }}
     </div>
   </div>
 </div>
-  <div class="p-2"> 
-     <button type="submit" class="btn p-2">M'inscrire</button>
+  <div class="p-4"> 
+     <button type="submit" class="btn p-2 bg-sky-600/50 font-bold">S'inscrire</button>
   </div> 
   </div>
-
+</div>
 
 
 
