--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,38 +14,41 @@
         </div>
     {% endif %}
 
-    <div><h1 class="h3 mb-3 text-center font-weight-normal text-xl">Connexion</h1>
-    <div class="p-4 text-center">
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    <div class="flex flex-col items-center">
+        <div>
+            <h1 class="text-center text-5xl p-10">Connexion</h1>
+        
+        
+                <div class="flex flex-col justify-center">
+                    <div class="p-4">
+                    <label for="inputEmail">Email</label>
+                        <div>
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                        </div>
+                </div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-    <button class="btn btn-lg btn-primary " type="submit">
-        Se connecter
-    </button>
-    </div>
+                <div class="flex flex-col justify-center">
+                    <div class="p-4">
+                        <label for="inputPassword">Mot de passe</label>
+                    <div>
+                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                     </div>
+                </div>
 
-    <div class="text-center p-4"><p>Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez vous en cliquant ici</a></p></div>
-    <div class="text-center p-4"><p>Vous avez oublié votre mot de passe ? <a href="{{ path('app_forgot_password_request') }}">Cliquez-ici</a>
-</p></div>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+
+                <div class="p-4">
+                    <button class="btn p-2 bg-sky-600/50 font-bold" type="submit">Se connecter</button>
+                    <p class="pt-3.5">Vous n'avez pas encore de compte ? <a href="{{ path('app_register') }}"><strong>Inscrivez vous en cliquant ici</a></strong></p>
+                    <p class="py-3">Vous avez oublié votre mot de passe ? <a href="{{ path('app_forgot_password_request') }}"><strong>Cliquez-ici</a></strong></p>
+                </div>
+                
+                    
+                </div>
         </div>
-    #}
-
-    <div class"text-center text-lg">
-    
     </div>
+    
 </form>
 {% endblock %}
