--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -6,17 +6,22 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1 class="text-center p-4">Réinitialisation de votre mot de passe</h1>
+    <h1 class="text-center text-2xl p-10">Réinitialisation de votre mot de passe</h1>
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
+        <div>
+            {{ form_start(requestForm) }}
+                <div class="flex items-center justify-center">
+                    {{ form_row(requestForm.email) }}
+                </div>
+        </div>
         
-        <div class="p-4">
-            <small>
-                Entrez votre adresse email et vous recevrez un lien pour réinitialiser votre mot de passe.
-            </small>
+        
+        <div class="text-center">
+            <small >Entrez votre adresse email et vous recevrez un lien pour réinitialiser votre mot de passe.</small>
         </div>
 
-        <button class="btn btn-primary">Envoyer la demande de réinitialisation du mot de passe</button>
+        <div class="text-center p-4"><button class="btn btn-primary bg-sky-600/50 font-bold p-2">Envoyer la demande de réinitialisation du mot de passe</button></div>
+        
     {{ form_end(requestForm) }}
+    
 {% endblock %}
