--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -17,6 +17,7 @@
 
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-8 dark:text-gray-400 lg:grid-cols-4 xl:gap-x-8">
         {% for product in products %}
+              
             <div class="group relative gap-8 toto" data-category="{{product.productCategory.id}}">
                 <div class="min-h-80 aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                     <img src="{{ app_pictures_dir }}/{{ product.picture }}" alt="" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
@@ -30,17 +31,18 @@
                             </a>
                         </h3>
                     </div>
-                    {% if product.productPromotion.promotionPercentage is defined %}
-                        <p class="m-2 text-md text-grey-500 line-through ">{{ product.price }} €</p>
-                        {% set promoPrice = product.price * product.productPromotion.promotionPercentage  / 100 %}
-                        <p class="m-2 text-md  text-red-500 font-bold">  {{ product.price - promoPrice}} €</p>
+
+                    {% if product.productPromotion.endTime|date("Y-m-d") > "now"|date("Y-m-d") %}
+                        <p class="m-2 text-md text-grey-500 line-through">{{ product.price  }} €</p>
+                        {% set promoPrice = product.price * product.productPromotion.promotionPercentage / 100 %}
+                        <p class="m-2 text-md text-red-500 font-bold">{{ product.price - promoPrice }} €</p>
                     {% else %}
-                        <p class="m-2 text-md  text-red-500 font-bold">  {{ product.price}} €</p>
-                    {%endif %}
+                        <p class="m-2 text-md text-gray-900 font-bold">{{ product.price }} €</p>
+                    {% endif %}
                 </div>
                 <p class="text-sm font-medium text-gray-900">{{ product.description | raw }}</p>
-
-            </div>
+                </div>
+                
 
         {% endfor %}
 
